--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,15 +43,15 @@ jobs:
       run: |
         git config --global user.email "dlwogur0712@gmail.com"
         git config --global user.name "jaehyuk-lee-0712"
-        #git add scrapList/cardHana_*.json  # 와일드카드 사용
-        #git add scrapList/cardHyundai_*.json  # 와일드카드 사용
-        #git add scrapList/cardIBK_*.json  # 와일드카드 사용
-        #git add scrapList/cardKB_*.json  # 와일드카드 사용
-        #git add scrapList/cardLotte_*.json  # 와일드카드 사용
-        #git add scrapList/cardNH_*.json  # 와일드카드 사용
-        #git add scrapList/cardSamsung_*.json  # 와일드카드 사용
-        #git add scrapList/cardSinhan_*.json  # 와일드카드 사용
-        #git add scrapList/cardWoori_*.json  # 와일드카드 사용
+        git add scrapList/cardHana_*.json  # 와일드카드 사용
+        git add scrapList/cardHyundai_*.json  # 와일드카드 사용
+        git add scrapList/cardIBK_*.json  # 와일드카드 사용
+        git add scrapList/cardKB_*.json  # 와일드카드 사용
+        git add scrapList/cardLotte_*.json  # 와일드카드 사용
+        git add scrapList/cardNH_*.json  # 와일드카드 사용
+        git add scrapList/cardSamsung_*.json  # 와일드카드 사용
+        git add scrapList/cardSinhan_*.json  # 와일드카드 사용
+        git add scrapList/cardWoori_*.json  # 와일드카드 사용
         git commit -m "신용카드 데이터 수집"
     - name: push
       uses: ad-m/github-push-action@master
