--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,27 +1,24 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python package
 
 on:
   push:
-    branches: [ "main" ] 
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   schedule:
     - cron: '0 2 * * *'
 
 jobs:
+
   cardScrap:
-
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
         
     - name: Install dependencies
       run: |
@@ -43,32 +40,31 @@ jobs:
       run: |
         git config --global user.email "dlwogur0712@gmail.com"
         git config --global user.name "jaehyuk-lee-0712"
-        git add scrapList/cardHana_*.json  # 와일드카드 사용
-        git add scrapList/cardHyundai_*.json  # 와일드카드 사용
-        git add scrapList/cardIBK_*.json  # 와일드카드 사용
-        git add scrapList/cardKB_*.json  # 와일드카드 사용
-        git add scrapList/cardLotte_*.json  # 와일드카드 사용
-        git add scrapList/cardNH_*.json  # 와일드카드 사용
-        git add scrapList/cardSamsung_*.json  # 와일드카드 사용
-        git add scrapList/cardSinhan_*.json  # 와일드카드 사용
-        git add scrapList/cardWoori_*.json  # 와일드카드 사용
+        git add scrapList/cardHana_*.json
+        git add scrapList/cardHyundai_*.json
+        git add scrapList/cardIBK_*.json
+        git add scrapList/cardKB_*.json
+        git add scrapList/cardLotte_*.json
+        git add scrapList/cardNH_*.json
+        git add scrapList/cardSamsung_*.json
+        git add scrapList/cardSinhan_*.json
+        git add scrapList/cardWoori_*.json
         git commit -m "신용카드 데이터 수집"
     - name: push
       uses: ad-m/github-push-action@master
       with: 
-        branch: "main"
-        github_token: $
-
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
+        
   cardDetailScrap:
-
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
         
     - name: Install dependencies
       run: |
@@ -90,13 +86,10 @@ jobs:
       run: |
         git config --global user.email "dlwogur0712@gmail.com"
         git config --global user.name "jaehyuk-lee-0712"
-        git add scrapList/scrapCardDetail_*.json  # 와일드카드 사용
+        git add scrapList/scrapCardDetail_*.json
         git commit -m "신용카드 데이터 수집"
     - name: push
       uses: ad-m/github-push-action@master
       with: 
-        branch: "main"
-        github_token: $
-
-
-    
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
