--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: cardScrap
 
 on:
   push:
@@ -9,21 +9,20 @@ on:
     - cron: '0 2 * * *'
 
 jobs:
-
   cardScrap:
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 
+    - name: 파이썬 설정
       uses: actions/setup-python@v3
       with:
         python-version: 3.9
         
-    - name: Install dependencies
+    - name: 의존성 설치
       run: |
         python -m pip install --upgrade pip
-    - name: library install
+    - name: 라이브러리 설치
       run: |
         pip install requests
         pip install beautifulsoup4
@@ -33,10 +32,10 @@ jobs:
         pip install selenium
         pip install webdriver_manager
        
-    - name: run my file
+    - name: 스크립트 실행
       run: |
         python scrap.py
-    - name: commits
+    - name: 커밋 설정
       run: |
         git config --global user.email "dlwogur0712@gmail.com"
         git config --global user.name "jaehyuk-lee-0712"
@@ -50,45 +49,7 @@ jobs:
         git add scrapList/cardSinhan_*.json
         git add scrapList/cardWoori_*.json
         git commit -m "신용카드 데이터 수집"
-    - name: push
-      uses: ad-m/github-push-action@master
-      with: 
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main
-        
-  cardDetailScrap:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: 3.9
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-    - name: library install
-      run: |
-        pip install requests
-        pip install beautifulsoup4
-        pip install lxml
-        pip install pandas
-        pip install html5lib
-        pip install selenium
-        pip install webdriver_manager
-       
-    - name: run my file
-      run: |
-        python scrapDetail.py
-    - name: commits
-      run: |
-        git config --global user.email "dlwogur0712@gmail.com"
-        git config --global user.name "jaehyuk-lee-0712"
-        git add scrapList/scrapCardDetail_*.json
-        git commit -m "신용카드 데이터 수집"
-    - name: push
+    - name: 푸시
       uses: ad-m/github-push-action@master
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
