--- a/.github/workflows/python-package2.yml
+++ b/.github/workflows/python-package2.yml
@@ -14,6 +14,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # 원격 브랜치의 전체 히스토리를 가져옵니다.
+
     - name: 파이썬 설정
       uses: actions/setup-python@v3
       with:
@@ -35,12 +38,18 @@ jobs:
     - name: 스크립트 실행
       run: |
         python scrapDetail.py
+
+    - name: 원격 브랜치 최신 상태 통합
+      run: |
+        git pull origin main --no-edit  # 원격 브랜치를 풀하여 최신 상태로 유지
+
     - name: 커밋 설정
       run: |
         git config --global user.email "dlwogur0712@gmail.com"
         git config --global user.name "jaehyuk-lee-0712"
         git add scrapList/scrapCardDetail_*.json
         git commit -m "신용카드 데이터 수집"
+        
     - name: 푸시
       uses: ad-m/github-push-action@master
       with: 
