--- a/.github/workflows/python-package2.yml
+++ b/.github/workflows/python-package2.yml
@@ -25,8 +25,6 @@ jobs:
     - name: 의존성 설치
       run: |
         python -m pip install --upgrade pip
-    - name: 라이브러리 설치
-      run: |
         pip install requests
         pip install beautifulsoup4
         pip install lxml
@@ -39,11 +37,21 @@ jobs:
       run: |
         python scrapDetail.py
 
+    - name: 변경사항 검사
+      id: changes
+      run: |
+        git status
+        if git diff-index --quiet HEAD --; then
+            echo "::set-output name=changes_exist::false"
+        else
+            echo "::set-output name=changes_exist::true"
+        
     - name: 원격 브랜치 최신 상태 통합
       run: |
         git pull origin main --no-edit  # 원격 브랜치를 풀하여 최신 상태로 유지
-
+    
     - name: 커밋 설정
+      if: steps.changes.outputs.changes_exist == 'true'
       run: |
         git config --global user.email "dlwogur0712@gmail.com"
         git config --global user.name "jaehyuk-lee-0712"
@@ -51,6 +59,7 @@ jobs:
         git commit -m "신용카드 데이터 수집"
         
     - name: 푸시
+      if: steps.changes.outputs.changes_exist == 'true'
       uses: ad-m/github-push-action@master
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
